# vanguard_systems

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  claim_agent.py  coding_agent.py  denial_agent.py  prior_auth_agent.py  rcm_pipeline.py
app/api/: auth.py  deps.py  errors.py  schemas.py
app/eligibility/: README.md  __init__.py  api_client.py  audit.py  benefit_block.py  canonical_model.py  canonical_record.py  cob.py  config.py  cost_calculator.py  db.py  default_ucr.py  fee_schedule.py  integrity.py  layer3_llm_enrich.py  main.py  mock_clinic.py  models.py  normalizer.py  router.py  sanitize.py  services.py  stedi_errors.py  triggers.py
app/integrations/: agent_runs.py  db_tables.py  payer_identity.py  stedi_claims.py  supabase_client.py
app/llm/: __init__.py  coding_llm.py  denial_llm.py  prior_auth_llm.py
app/runtime/: context.py  executor.py
app/schemas/: claim.py  coding.py  denial.py  prior_auth.py
app/security/: __init__.py  phi.py
app/services/: __init__.py  cdt_vector_memory.py  decision_service.py  rag_ingest.py
app/tools/: __init__.py  builtin.py  claim_tools.py  coding_tools.py  denial_tools.py  prior_auth_db.py  prior_auth_tools.py  registry.py
docs/: eligibility-layer1-contract.md  eligibility-layer23-checklist.md  eligibility-workflow.md  opendental-integration.md  production-roadmap.md
docs/archive/: future-migration.md  readme-v1.5.md
eligibility_dashboard/: next.config.ts  package-lock.json  package.json
examples/: aardvark_84103_response.latest.json  beaver_52133_response.latest.json  eligibility_beaver_umr_52133_demo.json  eligibility_beaver_umr_52133_response.latest.json  eligibility_check_aardvark_stedi_demo.json  eligibility_elephant_metlife_one_demo.json  eligibility_elephant_metlife_one_response.latest.json  eligibility_jaguar_cigna_one_demo.json  eligibility_plaque_penguin_amitas_demo.json
fixtures/raw/: active_missing_financials.json  active_outofnetwork.json  happy_path_innetwork.json  inactive_subscriber.json  procedure_not_covered.json
scripts/: apply_coding_agent_rag_schema.py  apply_rcm_schema.py  backfill_cdt_embeddings.py  demo_opendental_eligibility.py  embed_cdt_jina_backfill.py  extract_ny_medicaid_cdt.py  freeze_od_responses.py  generate_cdt2024_master_sql.py  generate_delta_payer_rules.py  generate_icd10cm_2026_sql.py  generate_payer_network_seed.py  generate_structured_ny_cdt_rules.py  ingest_pdf_rag.py  scan_od_patients.py  smoke_od_route.py  split_icd10cm_sql_chunks.py  test_cdt_vector_search.py  test_search.py  verify_supabase_env.py  watch_od_appointments.py
supabase/migrations/: 001_agent_run_log.sql  002_icd10_codes.sql  003_icd10_codes_anon_select.sql  004_rcm_dashboard.sql  005_coding_agent_rag.sql  006_nys_medicaid_cdt_rules.sql  007_nys_medicaid_cdt_rules_structured.sql  008_nys_medicaid_cdt_high_impact_overrides.sql  009_delta_dentist_handbook_rules.sql  010_delta_dentist_handbook_high_impact_overrides.sql  011_unified_claim_adjudication_function.sql  013_cdt2024_master_load.sql  014_cdt_codes_master_compat_view.sql  015_align_cdt_codes_schema.sql  016_public_adjudication_rpc_wrapper.sql  017_public_payer_rules.sql  018_claim_intake_snapshot.sql  019_cdt_codes_embedding_vector_1024.sql  020_eligibility_agent.sql  021_domain_schema_refactor.sql  022_domain_naming_aliases.sql  023_seed_payer_network_dental.sql  024_seed_payer_fee_schedules_baseline.sql  025_payer_identity_alias.sql  026_seed_payer_identity_aliases.sql  026_seed_payer_network_from_stedi_csv.sql  027_minimal_agent_db_aliases_and_runs.sql  027_seed_payer_fee_schedules_illustrative.sql  028_eligibility_dashboard_requests.sql  029_eligibility_request_webhook.sql  030_eligibility_webhook_agent_url.sql  031_eligibility_readiness_foundation.sql  032_eligibility_retry_trigger.sql  033_eligibility_security_and_deployment_hardening.sql  034_eligibility_agent_product_intelligence.sql  035_eligibility_public_request_view_refresh.sql  036_eligibility_schedule_provider_fields.sql  (+9 more)
tests/: conftest.py  test_api_auth.py  test_api_errors.py  test_claim_agent.py  test_coding_agent.py  test_denial_agent.py  test_eligibility_api_key_middleware.py  test_eligibility_pipeline_e2e.py  test_normalize_benefit_block.py  test_payer_identity.py  test_prior_auth_agent.py  test_rcm_pipeline.py  test_rcm_pipeline_errors.py  test_stedi_claims.py
(+63 files in other folders)
